# p2996-reflection-playground

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh  prepare.sh  run_executable.sh  update_clang.sh
hooks/: install.sh  pre-commit
src/: commands.cpp  common.hpp  dyn_traits.cpp  etc.cpp  json_parse.hpp  json_schema.cpp  json_schema3.cpp  json_struct.cpp  module_test.cpp  module_test.cppm  module_test_main.cpp  my_tuple.hpp  named_construct.cpp  named_params.cpp  named_params2.cpp  runtime_name_setter.cpp  runtime_setter_stuff.hpp
src/json_schema2/: common.hpp  json.hpp  main.cpp  map.hpp  string.hpp
